Fix/fix scroll (#140)
* feat: adapt cart page for mobiles

* fix: fix horizontal scroll and style vertical one

--- a/src/components/Catalog/CategorySidebar/CategorySidebar.css
+++ b/src/components/Catalog/CategorySidebar/CategorySidebar.css
@@ -9,7 +9,10 @@
   top: 30px;
   bottom: 30px;
   max-height: calc(100vh - 140px);
+  overflow-x: hidden;
   overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: var(--dark-moss-green) rgba(88, 119, 82, 0.5);
 }
 
 .sidebar-title {
@@ -89,7 +92,7 @@
     margin: 0;
     padding: 0;
     border-radius: 0;
-    overflow-y: unset;
+    overflow: unset;
   }
 
   .burger-wrapper {
